downgrade to Java 8